Fixed a bug on the css that made the logos icons not centered

--- a/carlos_portfolio/my-app/src/components/styles/logosStyles.css
+++ b/carlos_portfolio/my-app/src/components/styles/logosStyles.css
@@ -5,8 +5,8 @@
 .logos {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    justify-content: center;
     align-items: center;
+    justify-items: center;
     column-gap: 48px;
     width: fit-content;
     border-radius: 12px;
